--- a/codeception.yml
+++ b/codeception.yml
@@ -8,3 +8,4 @@ actor_suffix: Tester
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
+        - Tests\Neznajka\Codeception\Engine\Extension\StaticUnitTestsExtension
