--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,4 +7,10 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
-    step_decorators: ~        
+    step_decorators: ~
+aspect_mock:
+    include_paths:
+        - src
+        - public
+    temp_folder:
+        "unit_tests"
